polished the appearance some more

--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -1,26 +1,29 @@
-.form {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-areas:
-          "title"
-          "radio"
-          "fields"
-          "buttons";
+// Earlier work - showcase - not in use.
+// Thought to make a grid, but not necessary for this task.
 
-  &__title {
-    grid-area: title;
-  }
-
-  &__radio {
-    grid-area: radio;
-  }
-
-  &__fields {
-    grid-area: fields;
-  }
-
-  &__buttons {
-    grid-area: buttons;
-  }
-}
+//.form {
+//  display: grid;
+//  grid-template-columns: 1fr;
+//  grid-template-rows: repeat(4, 1fr);
+//  grid-template-areas:
+//          "title"
+//          "radio"
+//          "fields"
+//          "buttons";
+//
+//  &__title {
+//    grid-area: title;
+//  }
+//
+//  &__radio {
+//    grid-area: radio;
+//  }
+//
+//  &__fields {
+//    grid-area: fields;
+//  }
+//
+//  &__buttons {
+//    grid-area: buttons;
+//  }
+//}
