--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 @import "App";
 
 // Not necessary for this task -- showcase
+// Not needed because there is not enough code for using global variables.
+
 //@import "form/form";
 //@import "style/variables"
