--- a/src/App.scss
+++ b/src/App.scss
@@ -46,7 +46,7 @@
   }
 
   .input-field {
-    width: 440px;
+    width: 470px;
     height: 55px;
   }
 
@@ -55,6 +55,7 @@
     font-family: AppleSDGothicNeo, serif;
     margin: 6px 0 25px 11px;
     color: #ff0000;
+    width: 490px;
   }
 
   .form__buttons {
@@ -67,7 +68,7 @@
   .form {
     border: 1px solid #dadce0;
     border-radius: 20px;
-    padding: 55px;
+    padding: 70px 55px 35px 80px;
   }
 
   .dropdown-arrow {
