a little bit cleanup

--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -1,6 +1,8 @@
 // Earlier work - showcase - not in use.
 // Thought to make a grid, but not necessary for this task.
 
+// Look at App.scss for finding the CSS
+
 //.form {
 //  display: grid;
 //  grid-template-columns: 1fr;
